<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014 tacks_a
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/lst_anki_folder_edit"
        android:title="@string/menu_edit" />
    <item
        android:id="@+id/lst_anki_folder_delete"
        android:title="@string/menu_delete" />
    <item
        android:id="@+id/lst_anki_folder_show_anki_card_list"
        android:title="@string/menu_anki_card_list" />
    <item
        android:id="@+id/lst_anki_folder_show_exam"
        android:title="@string/menu_exam" />

</menu>