<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014 tacks_a
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_cancel" />

        <Button
            android:id="@+id/btnResist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_resist" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/lytButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvTitleCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/title_card_info">

                <requestFocus />
            </TextView>

            <TextView
                android:id="@+id/txvAnkiCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/txvTitleFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_folder_name" />

            <Spinner
                android:id="@+id/spnFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvTitleWord1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_word1" />

            <EditText
                android:id="@+id/edtWord1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txvTitleWord2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_word2" />

            <EditText
                android:id="@+id/edtWord2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>