<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014 tacks_a
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvTitleQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_question" />

            <TextView
                android:id="@+id/txvQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txvTitleExamPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_exam_point" />

            <TextView
                android:id="@+id/txvExamPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvTitleCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_info" />

            <TextView
                android:id="@+id/txvAnkiCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lytFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/lytButtonBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnswer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_answer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytButtonAfter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIncorrect"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_incorrect" />

            <Button
                android:id="@+id/btnCorrect"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_correct" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lytFooter"
        android:layout_below="@id/lytHeader">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvTitleWord1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_word1" />

            <TextView
                android:id="@+id/txvWord1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txvTitleWord2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_word2" />

            <TextView
                android:id="@+id/txvWord2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>